[Mobile] Fix wine filters & add permanent scrollbar on cart

--- a/assets/scss/checkout.scss
+++ b/assets/scss/checkout.scss
@@ -78,3 +78,25 @@ table {
     max-height: 150px;
   }
 }
+.table-responsive::-webkit-scrollbar {
+  -webkit-appearance: none;
+}
+
+.table-responsive::-webkit-scrollbar:vertical {
+  width: 6px;
+}
+
+.table-responsive::-webkit-scrollbar:horizontal {
+  height: 6px;
+}
+
+.table-responsive::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, .5);
+  border-radius: 10px;
+  border: 2px solid #ffffff;
+}
+
+.table-responsive::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background-color: #ffffff;
+}
